# SDL3-Boilerplate

./: .gitignore  CMakeLists.txt  README.md  build_Linux.sh  build_Web.bat  build_Win32.bat
3rd/: CMakeLists.txt
3rd/Font/: dareo.regular.h  dareo.source.txt
3rd/NATE/: nate_DynMemory.h
src/: CMakeLists.txt  game.c  game.h  header_only_include.c  images.c  index.html  load_externals.c  main.c  main.h  task.c  text.c
